--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Papa-Eccellenza-b-dramma-in-tre-atti_75860
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 75860-h/images/cover.jpg
 creator:
   author:
     agent_name: Rovetta, Gerolamo
@@ -11,6 +14,8 @@ creator:
     - https://en.wikipedia.org/wiki/Gerolamo_Rovetta
     - https://it.wikipedia.org/wiki/Gerolamo_Rovetta
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75860#Papa-Eccellenza-b-dramma-in-tre-atti
 gutenberg_issued: '2025-04-14'
 gutenberg_type: Text
 identifiers:
